Update serving module
Signed-off-by: Terence <terencelimxp@gmail.com>