@@ -16,32 +16,33 @@
  */
 package feast.serving.service;
 
+import static feast.common.it.DataGenerator.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.initMocks;
 
 import com.google.common.collect.Lists;
 import com.google.protobuf.Duration;
 import com.google.protobuf.Timestamp;
-import feast.proto.core.FeatureSetProto.EntitySpec;
-import feast.proto.core.FeatureSetProto.FeatureSetSpec;
-import feast.proto.serving.ServingAPIProto.FeatureReference;
-import feast.proto.serving.ServingAPIProto.GetOnlineFeaturesRequest;
-import feast.proto.serving.ServingAPIProto.GetOnlineFeaturesRequest.EntityRow;
+import feast.proto.core.FeatureProto;
+import feast.proto.core.FeatureTableProto.FeatureTableSpec;
+import feast.proto.serving.ServingAPIProto;
+import feast.proto.serving.ServingAPIProto.GetOnlineFeaturesRequestV2;
 import feast.proto.serving.ServingAPIProto.GetOnlineFeaturesResponse;
 import feast.proto.serving.ServingAPIProto.GetOnlineFeaturesResponse.FieldStatus;
 import feast.proto.serving.ServingAPIProto.GetOnlineFeaturesResponse.FieldValues;
 import feast.proto.types.FeatureRowProto.FeatureRow;
 import feast.proto.types.FieldProto;
-import feast.proto.types.ValueProto.Value;
+import feast.proto.types.ValueProto;
 import feast.serving.specs.CachedSpecService;
-import feast.storage.api.retriever.FeatureSetRequest;
+import feast.storage.api.retriever.Feature;
+import feast.storage.connectors.redis.retriever.OnlineRetriever;
 import feast.storage.connectors.redis.retriever.RedisOnlineRetriever;
 import io.opentracing.Tracer;
 import io.opentracing.Tracer.SpanBuilder;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import org.junit.Before;
@@ -57,15 +58,20 @@ public class OnlineServingServiceTest {
   @Mock Tracer tracer;
 
   @Mock RedisOnlineRetriever retriever;
+  @Mock OnlineRetriever retrieverV2;
 
   private OnlineServingService onlineServingService;
+  private OnlineServingServiceV2 onlineServingServiceV2;
 
   List<FeatureRow> testFeatureRows;
+  List<Feature> mockedFeatureRows;
+  List<FeatureProto.FeatureSpecV2> featureSpecs;
 
   @Before
   public void setUp() {
     initMocks(this);
     onlineServingService = new OnlineServingService(retriever, specService, tracer);
+    onlineServingServiceV2 = new OnlineServingServiceV2(retrieverV2, specService, tracer);
 
     // create fake feature rows for testing.
     testFeatureRows = new ArrayList<>();
@@ -74,15 +80,21 @@ public class OnlineServingServiceTest {
             .setEventTimestamp(Timestamp.newBuilder().setSeconds(100))
             .addAllFields(
                 Lists.newArrayList(
-                    FieldProto.Field.newBuilder().setName("entity1").setValue(intValue(1)).build(),
+                    FieldProto.Field.newBuilder()
+                        .setName("entity1")
+                        .setValue(createInt64Value(1))
+                        .build(),
                     FieldProto.Field.newBuilder()
                         .setName("entity2")
-                        .setValue(strValue("a"))
+                        .setValue(createStrValue("a"))
                         .build(),
-                    FieldProto.Field.newBuilder().setName("feature1").setValue(intValue(1)).build(),
+                    FieldProto.Field.newBuilder()
+                        .setName("feature1")
+                        .setValue(createInt64Value(1))
+                        .build(),
                     FieldProto.Field.newBuilder()
                         .setName("feature2")
-                        .setValue(intValue(1))
+                        .setValue(createInt64Value(1))
                         .build()))
             .setFeatureSet("featureSet")
             .build());
@@ -92,15 +104,21 @@ public class OnlineServingServiceTest {
             .setEventTimestamp(Timestamp.newBuilder().setSeconds(100))
             .addAllFields(
                 Lists.newArrayList(
-                    FieldProto.Field.newBuilder().setName("entity1").setValue(intValue(2)).build(),
+                    FieldProto.Field.newBuilder()
+                        .setName("entity1")
+                        .setValue(createInt64Value(2))
+                        .build(),
                     FieldProto.Field.newBuilder()
                         .setName("entity2")
-                        .setValue(strValue("b"))
+                        .setValue(createStrValue("b"))
                         .build(),
-                    FieldProto.Field.newBuilder().setName("feature1").setValue(intValue(2)).build(),
+                    FieldProto.Field.newBuilder()
+                        .setName("feature1")
+                        .setValue(createInt64Value(2))
+                        .build(),
                     FieldProto.Field.newBuilder()
                         .setName("feature2")
-                        .setValue(intValue(2))
+                        .setValue(createInt64Value(2))
                         .build()))
             .setFeatureSet("featureSet")
             .build());
@@ -111,29 +129,118 @@ public class OnlineServingServiceTest {
             .toBuilder()
             .setEventTimestamp(Timestamp.newBuilder().setSeconds(50))
             .build());
+
+    mockedFeatureRows = new ArrayList<>();
+    mockedFeatureRows.add(
+        Feature.builder()
+            .setFeatureReference(
+                ServingAPIProto.FeatureReferenceV2.newBuilder()
+                    .setFeatureTable("featuretable_1")
+                    .setName("feature_1")
+                    .build())
+            .setFeatureValue(createStrValue("1"))
+            .setEventTimestamp(Timestamp.newBuilder().setSeconds(100).build())
+            .build());
+    mockedFeatureRows.add(
+        Feature.builder()
+            .setFeatureReference(
+                ServingAPIProto.FeatureReferenceV2.newBuilder()
+                    .setFeatureTable("featuretable_1")
+                    .setName("feature_2")
+                    .build())
+            .setFeatureValue(createStrValue("2"))
+            .setEventTimestamp(Timestamp.newBuilder().setSeconds(100).build())
+            .build());
+    mockedFeatureRows.add(
+        Feature.builder()
+            .setFeatureReference(
+                ServingAPIProto.FeatureReferenceV2.newBuilder()
+                    .setFeatureTable("featuretable_1")
+                    .setName("feature_1")
+                    .build())
+            .setFeatureValue(createStrValue("3"))
+            .setEventTimestamp(Timestamp.newBuilder().setSeconds(100).build())
+            .build());
+    mockedFeatureRows.add(
+        Feature.builder()
+            .setFeatureReference(
+                ServingAPIProto.FeatureReferenceV2.newBuilder()
+                    .setFeatureTable("featuretable_1")
+                    .setName("feature_2")
+                    .build())
+            .setFeatureValue(createStrValue("4"))
+            .setEventTimestamp(Timestamp.newBuilder().setSeconds(100).build())
+            .build());
+    mockedFeatureRows.add(
+        Feature.builder()
+            .setFeatureReference(
+                ServingAPIProto.FeatureReferenceV2.newBuilder()
+                    .setFeatureTable("featuretable_1")
+                    .setName("feature_3")
+                    .build())
+            .setFeatureValue(createStrValue("5"))
+            .setEventTimestamp(Timestamp.newBuilder().setSeconds(100).build())
+            .build());
+    mockedFeatureRows.add(
+        Feature.builder()
+            .setFeatureReference(
+                ServingAPIProto.FeatureReferenceV2.newBuilder()
+                    .setFeatureTable("featuretable_1")
+                    .setName("feature_1")
+                    .build())
+            .setFeatureValue(createStrValue("6"))
+            .setEventTimestamp(Timestamp.newBuilder().setSeconds(50).build())
+            .build());
+
+    featureSpecs = new ArrayList<>();
+    featureSpecs.add(
+        FeatureProto.FeatureSpecV2.newBuilder()
+            .setName("feature_1")
+            .setValueType(ValueProto.ValueType.Enum.STRING)
+            .build());
+    featureSpecs.add(
+        FeatureProto.FeatureSpecV2.newBuilder()
+            .setName("feature_2")
+            .setValueType(ValueProto.ValueType.Enum.STRING)
+            .build());
   }
 
   @Test
   public void shouldReturnResponseWithValuesAndMetadataIfKeysPresent() {
-    GetOnlineFeaturesRequest request =
-        getOnlineFeaturesRequest(
-            List.of(
-                FeatureReference.newBuilder().setName("feature1").build(),
-                FeatureReference.newBuilder().setName("feature2").setProject("project").build()));
-
-    FeatureSetRequest featureSetRequest =
-        FeatureSetRequest.newBuilder()
-            .addAllFeatureReferences(request.getFeaturesList())
-            .setSpec(getFeatureSetSpec())
+    String projectName = "default";
+    ServingAPIProto.FeatureReferenceV2 featureReference1 =
+        ServingAPIProto.FeatureReferenceV2.newBuilder()
+            .setFeatureTable("featuretable_1")
+            .setName("feature_1")
             .build();
+    ServingAPIProto.FeatureReferenceV2 featureReference2 =
+        ServingAPIProto.FeatureReferenceV2.newBuilder()
+            .setFeatureTable("featuretable_1")
+            .setName("feature_2")
+            .build();
+    List<ServingAPIProto.FeatureReferenceV2> featureReferences =
+        List.of(featureReference1, featureReference2);
+    GetOnlineFeaturesRequestV2 request = getOnlineFeaturesRequestV2(projectName, featureReferences);
 
-    List<Optional<FeatureRow>> featureRows =
-        List.of(Optional.of(testFeatureRows.get(0)), Optional.of(testFeatureRows.get(1)));
+    List<Optional<Feature>> entityKeyList1 = new ArrayList<>();
+    List<Optional<Feature>> entityKeyList2 = new ArrayList<>();
+    entityKeyList1.add(Optional.of(mockedFeatureRows.get(0)));
+    entityKeyList1.add(Optional.of(mockedFeatureRows.get(1)));
+    entityKeyList2.add(Optional.of(mockedFeatureRows.get(2)));
+    entityKeyList2.add(Optional.of(mockedFeatureRows.get(3)));
 
-    when(specService.getFeatureSets(request.getFeaturesList(), ""))
-        .thenReturn(Collections.singletonList(featureSetRequest));
-    when(retriever.getOnlineFeatures(request.getEntityRowsList(), featureSetRequest))
-        .thenReturn(featureRows);
+    List<List<Optional<Feature>>> featureRows = List.of(entityKeyList1, entityKeyList2);
+
+    when(retrieverV2.getOnlineFeatures(any(), any(), any())).thenReturn(featureRows);
+    when(specService.getFeatureTableSpec(any(), any())).thenReturn(getFeatureTableSpec());
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(0).getFeatureReference()))
+        .thenReturn(featureSpecs.get(0));
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(1).getFeatureReference()))
+        .thenReturn(featureSpecs.get(1));
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(2).getFeatureReference()))
+        .thenReturn(featureSpecs.get(0));
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(3).getFeatureReference()))
+        .thenReturn(featureSpecs.get(1));
 
     when(tracer.buildSpan(ArgumentMatchers.any())).thenReturn(Mockito.mock(SpanBuilder.class));
 
@@ -141,276 +248,219 @@ public class OnlineServingServiceTest {
         GetOnlineFeaturesResponse.newBuilder()
             .addFieldValues(
                 FieldValues.newBuilder()
-                    .putFields("entity1", intValue(1))
+                    .putFields("entity1", createInt64Value(1))
                     .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("a"))
+                    .putFields("entity2", createStrValue("a"))
                     .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(1))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .putFields("project/feature2", intValue(1))
-                    .putStatuses("project/feature2", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_1", createStrValue("1"))
+                    .putStatuses("featuretable_1:feature_1", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_2", createStrValue("2"))
+                    .putStatuses("featuretable_1:feature_2", FieldStatus.PRESENT)
                     .build())
             .addFieldValues(
                 FieldValues.newBuilder()
-                    .putFields("entity1", intValue(2))
+                    .putFields("entity1", createInt64Value(2))
                     .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("b"))
+                    .putFields("entity2", createStrValue("b"))
                     .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(2))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .putFields("project/feature2", intValue(2))
-                    .putStatuses("project/feature2", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_1", createStrValue("3"))
+                    .putStatuses("featuretable_1:feature_1", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_2", createStrValue("4"))
+                    .putStatuses("featuretable_1:feature_2", FieldStatus.PRESENT)
                     .build())
             .build();
-    GetOnlineFeaturesResponse actual = onlineServingService.getOnlineFeatures(request);
+    GetOnlineFeaturesResponse actual = onlineServingServiceV2.getOnlineFeatures(request);
     assertThat(actual, equalTo(expected));
   }
 
   @Test
   public void shouldReturnResponseWithUnsetValuesAndMetadataIfKeysNotPresent() {
-    // some keys not present, should have empty values
-    GetOnlineFeaturesRequest request =
-        getOnlineFeaturesRequest(
-            List.of(
-                FeatureReference.newBuilder().setName("feature1").build(),
-                FeatureReference.newBuilder().setName("feature2").setProject("project").build()));
-
-    FeatureSetRequest featureSetRequest =
-        FeatureSetRequest.newBuilder()
-            .addAllFeatureReferences(request.getFeaturesList())
-            .setSpec(getFeatureSetSpec())
+    String projectName = "default";
+    ServingAPIProto.FeatureReferenceV2 featureReference1 =
+        ServingAPIProto.FeatureReferenceV2.newBuilder()
+            .setFeatureTable("featuretable_1")
+            .setName("feature_1")
             .build();
+    ServingAPIProto.FeatureReferenceV2 featureReference2 =
+        ServingAPIProto.FeatureReferenceV2.newBuilder()
+            .setFeatureTable("featuretable_1")
+            .setName("feature_2")
+            .build();
+    List<ServingAPIProto.FeatureReferenceV2> featureReferences =
+        List.of(featureReference1, featureReference2);
+    GetOnlineFeaturesRequestV2 request = getOnlineFeaturesRequestV2(projectName, featureReferences);
 
-    List<Optional<FeatureRow>> featureRows =
-        List.of(Optional.of(testFeatureRows.get(0)), Optional.empty());
+    List<Optional<Feature>> entityKeyList1 = new ArrayList<>();
+    List<Optional<Feature>> entityKeyList2 = new ArrayList<>();
+    entityKeyList1.add(Optional.of(mockedFeatureRows.get(0)));
+    entityKeyList1.add(Optional.of(mockedFeatureRows.get(1)));
+    entityKeyList2.add(Optional.of(mockedFeatureRows.get(4)));
 
-    when(specService.getFeatureSets(request.getFeaturesList(), ""))
-        .thenReturn(Collections.singletonList(featureSetRequest));
-    when(retriever.getOnlineFeatures(request.getEntityRowsList(), featureSetRequest))
-        .thenReturn(featureRows);
+    List<List<Optional<Feature>>> featureRows = List.of(entityKeyList1, entityKeyList2);
+
+    when(retrieverV2.getOnlineFeatures(any(), any(), any())).thenReturn(featureRows);
+    when(specService.getFeatureTableSpec(any(), any())).thenReturn(getFeatureTableSpec());
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(0).getFeatureReference()))
+        .thenReturn(featureSpecs.get(0));
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(1).getFeatureReference()))
+        .thenReturn(featureSpecs.get(1));
+
     when(tracer.buildSpan(ArgumentMatchers.any())).thenReturn(Mockito.mock(SpanBuilder.class));
 
     GetOnlineFeaturesResponse expected =
         GetOnlineFeaturesResponse.newBuilder()
             .addFieldValues(
                 FieldValues.newBuilder()
-                    .putFields("entity1", intValue(1))
+                    .putFields("entity1", createInt64Value(1))
                     .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("a"))
+                    .putFields("entity2", createStrValue("a"))
                     .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(1))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .putFields("project/feature2", intValue(1))
-                    .putStatuses("project/feature2", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_1", createStrValue("1"))
+                    .putStatuses("featuretable_1:feature_1", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_2", createStrValue("2"))
+                    .putStatuses("featuretable_1:feature_2", FieldStatus.PRESENT)
                     .build())
             .addFieldValues(
                 FieldValues.newBuilder()
-                    .putFields("entity1", intValue(2))
+                    .putFields("entity1", createInt64Value(2))
                     .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("b"))
+                    .putFields("entity2", createStrValue("b"))
                     .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", Value.newBuilder().build())
-                    .putStatuses("feature1", FieldStatus.NOT_FOUND)
-                    .putFields("project/feature2", Value.newBuilder().build())
-                    .putStatuses("project/feature2", FieldStatus.NOT_FOUND)
+                    .putFields("featuretable_1:feature_1", createEmptyValue())
+                    .putStatuses("featuretable_1:feature_1", FieldStatus.NOT_FOUND)
+                    .putFields("featuretable_1:feature_2", createEmptyValue())
+                    .putStatuses("featuretable_1:feature_2", FieldStatus.NOT_FOUND)
                     .build())
             .build();
-    GetOnlineFeaturesResponse actual = onlineServingService.getOnlineFeatures(request);
+    GetOnlineFeaturesResponse actual = onlineServingServiceV2.getOnlineFeatures(request);
     assertThat(actual, equalTo(expected));
   }
 
   @Test
   public void shouldReturnResponseWithUnsetValuesAndMetadataIfMaxAgeIsExceeded() {
-    // keys present, but considered stale when compared to maxAge
-    GetOnlineFeaturesRequest request =
-        getOnlineFeaturesRequest(
-            List.of(
-                FeatureReference.newBuilder().setName("feature1").build(),
-                FeatureReference.newBuilder().setName("feature2").setProject("project").build()));
-
-    List<Optional<FeatureRow>> featureRows =
-        List.of(Optional.of(testFeatureRows.get(0)), Optional.of(testFeatureRows.get(2)));
-
-    FeatureSetSpec spec =
-        getFeatureSetSpec().toBuilder().setMaxAge(Duration.newBuilder().setSeconds(1)).build();
-    FeatureSetRequest featureSetRequest =
-        FeatureSetRequest.newBuilder()
-            .addAllFeatureReferences(request.getFeaturesList())
-            .setSpec(spec)
+    String projectName = "default";
+    ServingAPIProto.FeatureReferenceV2 featureReference1 =
+        ServingAPIProto.FeatureReferenceV2.newBuilder()
+            .setFeatureTable("featuretable_1")
+            .setName("feature_1")
             .build();
+    ServingAPIProto.FeatureReferenceV2 featureReference2 =
+        ServingAPIProto.FeatureReferenceV2.newBuilder()
+            .setFeatureTable("featuretable_1")
+            .setName("feature_2")
+            .build();
+    List<ServingAPIProto.FeatureReferenceV2> featureReferences =
+        List.of(featureReference1, featureReference2);
+    GetOnlineFeaturesRequestV2 request = getOnlineFeaturesRequestV2(projectName, featureReferences);
 
-    when(specService.getFeatureSets(request.getFeaturesList(), ""))
-        .thenReturn(Collections.singletonList(featureSetRequest));
-    when(retriever.getOnlineFeatures(request.getEntityRowsList(), featureSetRequest))
-        .thenReturn(featureRows);
+    List<Optional<Feature>> entityKeyList1 = new ArrayList<>();
+    List<Optional<Feature>> entityKeyList2 = new ArrayList<>();
+    entityKeyList1.add(Optional.of(mockedFeatureRows.get(5)));
+    entityKeyList1.add(Optional.of(mockedFeatureRows.get(1)));
+    entityKeyList2.add(Optional.of(mockedFeatureRows.get(5)));
+    entityKeyList2.add(Optional.of(mockedFeatureRows.get(1)));
+
+    List<List<Optional<Feature>>> featureRows = List.of(entityKeyList1, entityKeyList2);
+
+    when(retrieverV2.getOnlineFeatures(any(), any(), any())).thenReturn(featureRows);
+    when(specService.getFeatureTableSpec(any(), any()))
+        .thenReturn(
+            FeatureTableSpec.newBuilder()
+                .setName("featuretable_1")
+                .addEntities("entity1")
+                .addEntities("entity2")
+                .addFeatures(
+                    FeatureProto.FeatureSpecV2.newBuilder()
+                        .setName("feature_1")
+                        .setValueType(ValueProto.ValueType.Enum.STRING)
+                        .build())
+                .addFeatures(
+                    FeatureProto.FeatureSpecV2.newBuilder()
+                        .setName("feature_2")
+                        .setValueType(ValueProto.ValueType.Enum.STRING)
+                        .build())
+                .setMaxAge(Duration.newBuilder().setSeconds(1))
+                .build());
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(1).getFeatureReference()))
+        .thenReturn(featureSpecs.get(1));
+    when(specService.getFeatureSpec(projectName, mockedFeatureRows.get(5).getFeatureReference()))
+        .thenReturn(featureSpecs.get(0));
+
     when(tracer.buildSpan(ArgumentMatchers.any())).thenReturn(Mockito.mock(SpanBuilder.class));
 
     GetOnlineFeaturesResponse expected =
         GetOnlineFeaturesResponse.newBuilder()
             .addFieldValues(
                 FieldValues.newBuilder()
-                    .putFields("entity1", intValue(1))
+                    .putFields("entity1", createInt64Value(1))
                     .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("a"))
+                    .putFields("entity2", createStrValue("a"))
                     .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(1))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .putFields("project/feature2", intValue(1))
-                    .putStatuses("project/feature2", FieldStatus.PRESENT)
+                    .putFields("featuretable_1:feature_1", createEmptyValue())
+                    .putStatuses("featuretable_1:feature_1", FieldStatus.OUTSIDE_MAX_AGE)
+                    .putFields("featuretable_1:feature_2", createStrValue("2"))
+                    .putStatuses("featuretable_1:feature_2", FieldStatus.PRESENT)
                     .build())
             .addFieldValues(
                 FieldValues.newBuilder()
-                    .putFields("entity1", intValue(2))
+                    .putFields("entity1", createInt64Value(2))
                     .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("b"))
+                    .putFields("entity2", createStrValue("b"))
                     .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", Value.newBuilder().build())
-                    .putStatuses("feature1", FieldStatus.OUTSIDE_MAX_AGE)
-                    .putFields("project/feature2", Value.newBuilder().build())
-                    .putStatuses("project/feature2", FieldStatus.OUTSIDE_MAX_AGE)
+                    .putFields("featuretable_1:feature_1", createEmptyValue())
+                    .putStatuses("featuretable_1:feature_1", FieldStatus.OUTSIDE_MAX_AGE)
+                    .putFields("featuretable_1:feature_2", createStrValue("2"))
+                    .putStatuses("featuretable_1:feature_2", FieldStatus.PRESENT)
                     .build())
             .build();
-    GetOnlineFeaturesResponse actual = onlineServingService.getOnlineFeatures(request);
+    GetOnlineFeaturesResponse actual = onlineServingServiceV2.getOnlineFeatures(request);
     assertThat(actual, equalTo(expected));
   }
 
-  @Test
-  public void shouldFilterOutUndesiredRows() {
-    // requested rows less than the rows available in the featureset
-    GetOnlineFeaturesRequest request =
-        getOnlineFeaturesRequest(
-            List.of(FeatureReference.newBuilder().setName("feature1").build()));
-
-    List<Optional<FeatureRow>> featureRows =
-        List.of(Optional.of(testFeatureRows.get(0)), Optional.of(testFeatureRows.get(1)));
-
-    FeatureSetRequest featureSetRequest =
-        FeatureSetRequest.newBuilder()
-            .addAllFeatureReferences(request.getFeaturesList())
-            .setSpec(getFeatureSetSpec())
-            .build();
-
-    when(specService.getFeatureSets(request.getFeaturesList(), ""))
-        .thenReturn(Collections.singletonList(featureSetRequest));
-    when(retriever.getOnlineFeatures(request.getEntityRowsList(), featureSetRequest))
-        .thenReturn(featureRows);
-    when(tracer.buildSpan(ArgumentMatchers.any())).thenReturn(Mockito.mock(SpanBuilder.class));
-
-    GetOnlineFeaturesResponse expected =
-        GetOnlineFeaturesResponse.newBuilder()
-            .addFieldValues(
-                FieldValues.newBuilder()
-                    .putFields("entity1", intValue(1))
-                    .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("a"))
-                    .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(1))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .build())
-            .addFieldValues(
-                FieldValues.newBuilder()
-                    .putFields("entity1", intValue(2))
-                    .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("b"))
-                    .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(2))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .build())
-            .build();
-    GetOnlineFeaturesResponse actual = onlineServingService.getOnlineFeatures(request);
-    assertThat(actual, equalTo(expected));
-  }
-
-  @Test
-  public void shouldApplyProjectOverrideInRequest() {
-    GetOnlineFeaturesRequest request =
-        getOnlineFeaturesRequest(
-                List.of(
-                    FeatureReference.newBuilder().setName("feature1").build(),
-                    FeatureReference.newBuilder()
-                        .setName("feature2")
-                        .setProject("project")
-                        .build()))
-            .toBuilder()
-            .setProject("project")
-            .build();
-
-    List<Optional<FeatureRow>> featureRows =
-        List.of(Optional.of(testFeatureRows.get(0)), Optional.of(testFeatureRows.get(1)));
-
-    FeatureSetRequest featureSetRequest =
-        FeatureSetRequest.newBuilder()
-            .addAllFeatureReferences(request.getFeaturesList())
-            .setSpec(getFeatureSetSpec())
-            .build();
-
-    when(specService.getFeatureSets(request.getFeaturesList(), "project"))
-        .thenReturn(Collections.singletonList(featureSetRequest));
-    when(retriever.getOnlineFeatures(request.getEntityRowsList(), featureSetRequest))
-        .thenReturn(featureRows);
-    when(tracer.buildSpan(ArgumentMatchers.any())).thenReturn(Mockito.mock(SpanBuilder.class));
-
-    GetOnlineFeaturesResponse expected =
-        GetOnlineFeaturesResponse.newBuilder()
-            .addFieldValues(
-                FieldValues.newBuilder()
-                    .putFields("entity1", intValue(1))
-                    .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("a"))
-                    .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(1))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .putFields("project/feature2", intValue(1))
-                    .putStatuses("project/feature2", FieldStatus.PRESENT)
-                    .build())
-            .addFieldValues(
-                FieldValues.newBuilder()
-                    .putFields("entity1", intValue(2))
-                    .putStatuses("entity1", FieldStatus.PRESENT)
-                    .putFields("entity2", strValue("b"))
-                    .putStatuses("entity2", FieldStatus.PRESENT)
-                    .putFields("feature1", intValue(2))
-                    .putStatuses("feature1", FieldStatus.PRESENT)
-                    .putFields("project/feature2", intValue(2))
-                    .putStatuses("project/feature2", FieldStatus.PRESENT)
-                    .build())
-            .build();
-    GetOnlineFeaturesResponse actual = onlineServingService.getOnlineFeatures(request);
-    assertThat(actual, equalTo(expected));
-  }
-
-  private Value intValue(int val) {
-    return Value.newBuilder().setInt32Val(val).build();
-  }
-
-  private Value strValue(String val) {
-    return Value.newBuilder().setStringVal(val).build();
-  }
-
-  private FeatureSetSpec getFeatureSetSpec() {
-    return FeatureSetSpec.newBuilder()
-        .setName("featureSet")
-        .addEntities(EntitySpec.newBuilder().setName("entity1"))
-        .addEntities(EntitySpec.newBuilder().setName("entity2"))
-        .setMaxAge(Duration.newBuilder().setSeconds(30))
+  private FeatureTableSpec getFeatureTableSpec() {
+    return FeatureTableSpec.newBuilder()
+        .setName("featuretable_1")
+        .addEntities("entity1")
+        .addEntities("entity2")
+        .addFeatures(
+            FeatureProto.FeatureSpecV2.newBuilder()
+                .setName("feature_1")
+                .setValueType(ValueProto.ValueType.Enum.STRING)
+                .build())
+        .addFeatures(
+            FeatureProto.FeatureSpecV2.newBuilder()
+                .setName("feature_2")
+                .setValueType(ValueProto.ValueType.Enum.STRING)
+                .build())
+        .setMaxAge(Duration.newBuilder().setSeconds(120))
         .build();
   }
 
-  private GetOnlineFeaturesRequest getOnlineFeaturesRequest(
-      List<FeatureReference> featureReferences) {
-    return GetOnlineFeaturesRequest.newBuilder()
-        .setOmitEntitiesInResponse(false)
+  private GetOnlineFeaturesRequestV2 getOnlineFeaturesRequestV2(
+      String projectName, List<ServingAPIProto.FeatureReferenceV2> featureReferences) {
+    return GetOnlineFeaturesRequestV2.newBuilder()
+        .setProject(projectName)
         .addAllFeatures(featureReferences)
         .addEntityRows(
-            EntityRow.newBuilder()
-                .setEntityTimestamp(Timestamp.newBuilder().setSeconds(100))
-                .putFields("entity1", intValue(1))
-                .putFields("entity2", strValue("a")))
+            GetOnlineFeaturesRequestV2.EntityRow.newBuilder()
+                .setTimestamp(Timestamp.newBuilder().setSeconds(100))
+                .putFields("entity1", createInt64Value(1))
+                .putFields("entity2", createStrValue("a")))
         .addEntityRows(
-            EntityRow.newBuilder()
-                .setEntityTimestamp(Timestamp.newBuilder().setSeconds(100))
-                .putFields("entity1", intValue(2))
-                .putFields("entity2", strValue("b")))
+            GetOnlineFeaturesRequestV2.EntityRow.newBuilder()
+                .setTimestamp(Timestamp.newBuilder().setSeconds(100))
+                .putFields("entity1", createInt64Value(2))
+                .putFields("entity2", createStrValue("b")))
+        .addFeatures(
+            ServingAPIProto.FeatureReferenceV2.newBuilder()
+                .setFeatureTable("featuretable_1")
+                .setName("feature_1")
+                .build())
+        .addFeatures(
+            ServingAPIProto.FeatureReferenceV2.newBuilder()
+                .setFeatureTable("featuretable_1")
+                .setName("feature_2")
+                .build())
         .build();
   }
 }
